--- a/02-frontend-reactjs/admin/src/App.css
+++ b/02-frontend-reactjs/admin/src/App.css
@@ -1,5 +1,6 @@
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .trigger {
@@ -11,13 +12,12 @@ body {
 }
 
 .trigger:hover {
-  color: #1890ff;
+  color: #ddd;
 }
 
 .logo {
   height: 32px;
   margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
 }
 
 .site-layout .site-layout-background {
@@ -29,10 +29,10 @@ body {
 }
 
 .ant-layout-sider {
-  flex: 0 0 250px !important;
-  max-width: 250px !important;
-  min-width: 250px !important;
-  width: 250px !important;
+  flex: 0 0 300px !important;
+  max-width: 300px !important;
+  min-width: 300px !important;
+  width: 300px !important;
 }
 
 .ant-layout-sider-collapsed {
@@ -59,13 +59,13 @@ main {
 }
 
 .logo {
-  background-color: #9AE6B4;
+  /* background-color; */
   margin: 0;
-  height: 65px;
+  height: 70px;
 }
 
 .ant-menu-title-content {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 /* Login Form */
@@ -87,6 +87,8 @@ main {
 
 .form-block {
   padding-top: 200px;
-  background-color: #9AE6B4;
+  background-color: #9ae6b4;
   min-height: 100vh;
 }
+
+/* Search Bar Style */
