--- a/02-frontend-reactjs/admin/src/App.css
+++ b/02-frontend-reactjs/admin/src/App.css
@@ -91,4 +91,8 @@ main {
   min-height: 100vh;
 }
 
-/* Search Bar Style */
+/* Category */
+.site-card-wrapper {
+  padding: 30px;
+  background: #ececec;
+}
