--- a/02-frontend-reactjs/admin/src/App.css
+++ b/02-frontend-reactjs/admin/src/App.css
@@ -1,72 +1,35 @@
-
 body {
   font-family: "Roboto", sans-serif;
 }
 
-.trigger {
-  padding: 0 24px;
-  font-size: 18px;
-  line-height: 64px;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
-.trigger:hover {
+/* Layout Style */
+/* .logo {
+  font-size: 30px;
+  font-weight: bold;
   color: #ddd;
 }
+.ant-row-rtl .logo {
+  float: right;
+  margin: 16px 0 16px 24px;
+}
 
+.site-layout-background {
+  background: #fff;
+} */
 .logo {
-  height: 32px;
   margin: 16px;
+  font-size: 30px;
+  font-weight: bold;
+  color: #ddd;
 }
 
 .site-layout .site-layout-background {
   background: #fff;
 }
-
-.ant-layout {
-  min-height: 100vh;
+[data-theme="dark"] .site-layout .site-layout-background {
+  background: #141414;
 }
-
-.ant-layout-sider {
-  flex: 0 0 300px !important;
-  max-width: 300px !important;
-  min-width: 300px !important;
-  width: 300px !important;
-}
-
-.ant-layout-sider-collapsed {
-  flex: 0 0 80px !important;
-  max-width: 80px !important;
-  min-width: 80px !important;
-  width: 80px !important;
-}
-
-.sm-logo {
-  display: none;
-}
-
-.ant-layout-sider-collapsed .sm-logo {
-  display: block;
-}
-
-.ant-layout-sider-collapsed .lg-logo {
-  display: none;
-}
-
-main {
-  overflow-y: scroll;
-}
-
-.logo {
-  /* background-color; */
-  margin: 0;
-  height: 70px;
-}
-
-.ant-menu-title-content {
-  font-size: 20px;
-}
+/* End of layout Style */
 
 /* Login Form */
 .login-form {
