--- a/05-frontend-end-user/moon/components/navbar/Navbar.module.css
+++ b/05-frontend-end-user/moon/components/navbar/Navbar.module.css
@@ -11,84 +11,72 @@
 .header_container {
   display: flex;
   flex-flow: row nowrap;
-  padding: 22px 20px;
+  padding: 22px 100px;
 }
 
 .header_left {
   display: flex;
-  max-width: 300px;
+  min-width: 300px;
   align-items: center;
   justify-content: flex-start;
+  margin-left: 30px;
 }
 
 .heading {
   font-size: 30px;
-  padding: 0 30px 0 5px;
+  padding: 0 30px;
   font-style: italic;
   color: #fff;
+  font-weight: 700;
 }
 
 .header_center {
-  width: 60%;
+  width: 50%;
   background-color: #fff;
   border-radius: 3px;
+  position: relative;
+  height: 50px;
 }
 
-.header_form {
-  display: flex;
-  flex-flow: row nowrap;
+.header_center:hover .header_sub {
+  display: block;
+}
+
+.header_center::after {
+  content: "";
   width: 100%;
-  height: 100%;
+  height: 10px;
+  background-color: rgb(108, 226, 108);
+  display: block;
 }
 
-.form_categories {
-  height: 100%;
-  width: 14%;
-  border-right: 1px solid #ccc;
+.header_name {
+  font-size: 18px;
+  display: block;
+  padding-left: 20px;
 }
 
-.form_control {
+.menu_icon {
+  display: flex;
+  justify-content: space-evenly;
   height: 100%;
-  width: 142px;
-  color: #202020;
-  border: none;
-  outline: none;
-  font-size: 14px;
+  position: relative;
+  align-items: center;
+}
+
+.header_sub {
+  list-style: none;
+  position: absolute;
   background-color: #fff;
-  padding: 0 10px;
+  width: 100%;
+  height: 180px;
+  top: 53px;
+  z-index: 1;
+  display: none;
 }
 
-.form_center {
-  width: 86%;
-}
-
-.form_input {
-  height: 100%;
-  width: 89%;
-  outline: none;
-  border: none;
-  font-size: 15px;
-  padding-left: 18px;
-}
-
-.form_center {
-  display: flex;
-}
-
-.form_button {
-  display: flex;
-}
-
-.header_button {
-  width: 102px;
-  background-color: #5385df;
-  color: #fff;
-  border: none;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+.header_sub1 {
+  padding-top: 5px;
 }
 
 .header_right {
